# totp

./: .gitignore  CMakeLists.txt  Config.cmake.in
.github/workflows/: cmake-multi-platform.yml
include/totp/: cotp.hpp  totp.hpp
src/: TOTP.cpp  otp.cpp  totp.cpp  totp.h  totp_.cpp
src/utils/: base32.cpp  whmac_openssl.cpp
test/: CMakeLists.txt
test/source/: test_otp.cpp  totp.cpp
tests/: CMakeLists.txt  TOTP_test.cpp
